# smolDM

./: .gitignore  Dockerfile  LICENSE.md  Pipfile  Procfile  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirments.txt  run.py  setup.cfg
.github/workflows/: pythonapp.yml
crael/: __init__.py  __main__.py  client.py  commands.py  connection.py  scene_loader.py  scenes.py  session.py
crael/db/: creal.db
smolDM/: __init__.py  __main__.py  client.py  commands.py  compass.py  scenes.py  session.py
smolDM/adventures/: default.md
src/: bot.py  client.py  commands.py  configure.py  connection.py
src/config/: config.json
src/db/: creal.db  schema.sql
src/smolDM/: __main__.py  client.py  compass.py
tests/: test_commands.py  test_connection.py  test_scenes.py
tests/mock_game/: scene1.md
